# multi_ai_assistant

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
ai_assistant/: __init__.py  ai_assistant.py  config.py  default_config.yaml  hotkey_manager.py  model_factory.py  utils.py
ai_assistant/assistant/: __init__.py  base.py  openai_model.py
ai_assistant/web/: __init__.py  server.py
ai_assistant/web/static/: index.html
